--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@
 }
 
 .about{
-  background-color: #3154A8;
+  background-color: white;
   color:white;
   text-align: center;
   border-top:solid;
