push contact me

--- a/views/blog.html
+++ b/views/blog.html
@@ -18,7 +18,8 @@
         </div>
       <div id="menu">
         <a href="../index.html">Qui suis-je ?</a> |
-        <a href=""> Blog </a>
+        <a href=""> Blog </a> |
+        <a href="form.html"> Contactez moi </a>
       </div>
     </div>      
   </nav>
