--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
 
+#contact{
+  text-align: center;
+  position: center;
+  float:center;
+}
 .formation{
   background-color: white;
   color:#3154A8;
