--- a/views/form.html
+++ b/views/form.html
@@ -7,66 +7,52 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <title>Contactez Moi</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <nav>
+      <div id="nav">
+        <div id="name">
+          Blog de adrien LEIB
+        </div>
+      <div id="menu">
+        <a href="../index.html">Qui suis-je ?</a> |
+        <a href="blog.html"> Blog </a> |
+        <a href=""> Contactez-moi </a>
+      </div>
+    </div>      
+    </nav>
+
+  <section  id="contact">
+    <h1>Contactez Moi !</h1>
 
 <!-- Contact Section -->
-  <section class="page-section" id="contact">
-    <div class="container">
-
-      <!-- Contact Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
-
-      <!-- Icon Divider -->
-      <div class="divider-custom">
-        <div class="divider-custom-line"></div>
-        <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
-        </div>
-        <div class="divider-custom-line"></div>
-      </div>
-
-      <!-- Contact Section Form -->
+    <form action="https://formspree.io/adrien.leib@ynov.com" method="POST">
       <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-          <form name="sentMessage" id="contactForm" novalidate="novalidate" action="https://formspree.io/adrien.leib@ynov.com" method="post">
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Name</label>
-                <input class="form-control" name="name" id="full-name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Email Address</label>
-                <input class="form-control" name="_replyto" id="email-address" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Message</label>
-                <textarea class="form-control" name="message" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
-            <br>
-            <div id="success"></div>
-            <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
-            </div>
-          </form>
+        <div class="col-md-12">
+          <label> Email </label>
+          <input type="email" name="mail" id="mail">
+          
+        </div>
+        
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <label> Texte </label>
+          <textarea name="Message"></textarea>
+          
         </div>
       </div>
-
-    </div>
+      <input type="submit" value="Send">
+    </form>
   </section>
+
+  <footer>
+    <div id="footer">
+        Copyrigth Adrien LEIB
+    </div>    
+  </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
