--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,10 @@
+h3 li{
+  text-align:   left;
+}
 h1{
   text-decoration: underline;
 }
-ol{
-    padding-inline-start: 0px;
-    margin-block-start: 0px;
-    margin-block-end: 0px;
-}
+
 #contact{
   text-align: center;
   position: center;
@@ -387,4 +386,9 @@ p{
   nav{
     font-size: 8px;
   }
+  ol{
+      padding-inline-start: 0px;
+  /*    margin-block-start: 0px;
+      margin-block-end: 0px;*/
+  }  
 }
